mocks: allow mock task method